[M-32] css color and  lint fixes

--- a/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
@@ -82,4 +82,9 @@
 
 .text-only-3-column__slides {
   padding-left: 15px;
+
+  .slick-active button {
+    background-color: $color__primary-blue;
+  }
+
 }
