Compiled CSS/JS files

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -15,7 +15,7 @@
 
 .eaton-link-list-vertical__eyebrow { text-transform: uppercase; }
 
-.eaton-link-list-vertical__eyebrow.heading { font-size: 2.4rem; }
+.eaton-link-list-vertical__eyebrow.heading { font-size: 2.4rem; line-height: 2.8px; }
 
 @media screen and (min-width: 992px) { .eaton-link-list-vertical { font-size: 1.8rem; }
   .eaton-link-list-vertical__eyebrow.heading { font-size: 1.8rem; } }
