EATON-535, EATON-539, EATON-542, EATON-543

--- a/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
@@ -37,6 +37,10 @@
     &__item {
       flex-basis: 100%;
       padding: 0 10px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
 
     &__content {
