--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
@@ -11,7 +11,7 @@
  */
 
 
-.eaton-featured-topic { padding-top: 120px; padding-bottom: 120px; }
+.eaton-featured-topic { padding-top: 60px; padding-bottom: 60px; }
 
 .eaton-featured-topic .glyphicon { display: none; }
 
@@ -31,5 +31,6 @@
 
 @media screen and (max-width: 767px) and (min-width: 992px) { .eaton-featured-topic .eaton-link-list-vertical__eyebrow { font-family: Arial, sans-serif; font-size: 3rem; font-weight: bold; line-height: 4.2rem; } }
 
-@media screen and (min-width: 992px) { .eaton-featured-topic__list-left::after { background: #F8F8F8; content: ''; height: 85%; position: absolute; right: 0; top: 5px; width: 2px; }
+@media screen and (min-width: 992px) { .eaton-featured-topic { padding-top: 120px; padding-bottom: 120px; }
+  .eaton-featured-topic__list-left::after { background: #F8F8F8; content: ''; height: 85%; position: absolute; right: 0; top: 5px; width: 2px; }
   .eaton-featured-topic__list-right { padding-left: 9%; } }
