--- a/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
@@ -62,6 +62,20 @@
   @include media-desktop-and-up {
     &__wrapper {
       display: flex;
+      flex-wrap: nowrap;
+
+      .eaton-grid-control & {
+        display: block;
+      }
+    }
+
+    &__item {
+      flex-basis: 33.33%;
+
+      .eaton-grid-control & {
+        flex-basis: 100%;
+        margin-bottom: 20px;
+      }
     }
 
     &__text {
