Icon list - Make style updates for no-image-highlights if placed in a column-container

--- a/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
@@ -63,8 +63,23 @@
   @include media-desktop-and-up {
     padding: ($spacing__sm * 2) 0;
 
+    .eaton-grid-control & {
+      padding: $spacing__sm 0;
+    }
+
     &__wrapper {
       display: flex;
+      flex-wrap: nowrap;
+
+      .eaton-grid-control & {
+        display: block;
+      }
+    }
+
+    &__item {
+      .eaton-grid-control & {
+        margin-bottom: 40px;
+      }
     }
 
     &__text {
