--- a/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
@@ -74,7 +74,7 @@
 
       .eaton-grid-control & {
         flex-basis: 100%;
-        margin-bottom: 20px;
+        margin-bottom: ($spacing__sm ) + 10;
       }
     }
 
