--- a/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
+++ b/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
@@ -5,8 +5,8 @@
 @import "../../../global/css/_config/sass";
 
 .eaton-featured-topic {
-  padding-top: $spacing__xl / 2;
-  padding-bottom: $spacing__xl / 2;
+  padding-top: $spacing__md / 2;
+  padding-bottom: $spacing__md / 2;
 
   .glyphicon {
     display: none;
