--- a/eaton.frontend/src/components/ttil-list/css/views/_view-tile-links.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-tile-links.scss
@@ -76,7 +76,7 @@
     bottom: 0;
     width: 100%;
     margin: 0;
-    padding: 10px 15px;
+    padding: 10px 15px 30px;
     font-size: 1.875em;
 
 
