Icon list - Make style updates for last-item in the stacked list to not have margin-bottom

--- a/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
@@ -75,6 +75,10 @@
       .eaton-grid-control & {
         flex-basis: 100%;
         margin-bottom: ($spacing__sm ) + 10;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
       }
     }
 
