--- a/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
@@ -79,6 +79,10 @@
     &__item {
       .eaton-grid-control & {
         margin-bottom: 40px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
       }
     }
 
