--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -33,6 +33,7 @@
   .eaton-grid-control .icon-list-proof-points__wrapper { display: block; }
   .icon-list-proof-points__item { -webkit-flex-basis: 33.33%; -ms-flex-preferred-size: 33.33%; flex-basis: 33.33%; }
   .eaton-grid-control .icon-list-proof-points__item { -webkit-flex-basis: 100%; -ms-flex-preferred-size: 100%; flex-basis: 100%; margin-bottom: 40px; }
+  .eaton-grid-control .icon-list-proof-points__item:last-child { margin-bottom: 0; }
   .icon-list-proof-points__text { font-size: 75px; }
   .icon-list-proof-points__symbol { font-size: 45px; top: 8px; }
   .icon-list-proof-points__title { font-size: 24px; } }
@@ -61,6 +62,7 @@
   .icon-list-no-image-highlights__wrapper { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; }
   .eaton-grid-control .icon-list-no-image-highlights__wrapper { display: block; }
   .eaton-grid-control .icon-list-no-image-highlights__item { margin-bottom: 40px; }
+  .eaton-grid-control .icon-list-no-image-highlights__item:last-child { margin-bottom: 0; }
   .icon-list-no-image-highlights__text { font-size: 3.75em; line-height: 65px; }
   .icon-list-no-image-highlights__symbol { font-size: 0.667em; top: -15px; }
   .icon-list-no-image-highlights__title { font-size: 1.125em; margin-bottom: 15px; } }
