--- a/eaton.frontend/src/components/quote/css/quote.scss
+++ b/eaton.frontend/src/components/quote/css/quote.scss
@@ -83,3 +83,17 @@
     }
   }
 }
+
+@include media-desktop-and-up {
+  .eaton-grid-control {
+    .eaton-quote {
+      .container {
+        width: 100%;
+      }
+    }
+
+    .quote {
+      padding-top: 0;
+    }
+  }
+}
