--- a/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
@@ -75,6 +75,19 @@
       }
     }
   }
+
+  .eaton-grid-control & {
+
+    margin-top: 0;
+
+    .container {
+      width: 100%;
+
+      .col-md-4 {
+        flex: 0 0 100%;
+      }
+    }
+  }
 }
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
