--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-category-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-category-hero.html
@@ -1,38 +1,55 @@
 <sly data-sly-use.data="${'../data/view-category-hero-data.js' @testdata=properties.testdata}">
-    <div class="eaton-ttil-list-category-hero">
-        <div class="row">
-            <div class="col-xs-12">
-                <!-- <img src="${data.mobile_image}" class="visible-xs img-responsive category-hero__header-image" />
-                <img src="${data.image}" class="hidden-xs img-responsive category-hero__header-image" /> -->
-                <div class="category-hero__header-image img-responsive">
-                    <!-- Start: Rendition Image Component -->
-                    <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
-                    <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
-                    </sly>
-                    <!-- End: Rendition Image Component -->
-                </div>
-                <div class="row category-hero__header-content container">
-                    <div class="row">
-                        <div class="col-xs-12 col-md-8 text-left">
-                            <div class="category-hero-eye-brown text-left b-eyebrow-small">
+  <div class="eaton-category-hero dark-theme ${
+    data.imageMaskEnabled ? 'image-mask' : ''
+  } ${
+    data.image.alignment ? 'bg-alignment' : ''
+  } ${
+    data.image.alignment == 'left' ? 'bg-alignment-left' : ''
+  } ${
+    data.image.alignment == 'center' ? 'bg-alignment-center' : ''
+  } ${
+    data.image.alignment == 'right' ? 'bg-alignment-right' : ''
+  }">
 
-                                <a class="category-hero__header-cta" target="${data.cta._target}" href="${data.cta.url}"><i class="glyphicon glyphicon-menu-left" aria-hidden=true></i> ${data.cta.title}</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-md-6 text-left">
-                            <div class="category-hero__header-title">
-                                <h2 class="eaton-title__headline b-heading-h1">${ data.title }</h2>
-                            </div>
-                            <div class="category-hero-bottomline"></div>
-                        </div>
-                        <div class="col-xs-12 col-md-6 category-hero-body-copy b-body-copy">
-                            <p>${data.text}</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="eaton-category-hero__image">
+
+      <div data-sly-test="${ data.imageMaskEnabled }"
+        class="eaton-category-hero__image-mask"></div>
+
+      <!-- Start: Rendition Image Component -->
+      <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-background.html">
+        <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
+      </sly>
+      <!-- End: Rendition Image Component -->
     </div>
+
+    <div class="eaton-category-hero__content">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="eaton-category-hero__eyebrow b-eyebrow-small">
+              <a class="eaton-category-hero__cta"
+                target="${ data.cta.target }"
+                href="${ data.cta.url }"
+                aria-label="${ 'Go back to' } ${ data.cta.title }"
+              >
+                <i class="icon icon-chevron-left" aria-hidden="true"></i>
+                <span class="">${ data.cta.title }</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
+            <h2 class="eaton-category-hero__title b-heading-h1">${ data.title }</h2>
+          </div>
+
+          <div class="col-xs-12 col-md-6">
+            <div class="eaton-category-hero__text b-hero-description">${ data.text }</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </sly>
