--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -137,25 +137,35 @@
   .eaton-ttil-image-list__content { text-align: center; }
   .eaton-ttil-image-list__image { width: 150px; display: inline-block; } }
 
-.eaton-ttil-list-category-hero { overflow: hidden; }
+.eaton-category-hero { position: relative; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
 
-.category-hero__header-image img { width: 100%; height: auto; }
+.eaton-category-hero__image { z-index: 1; position: absolute; left: 0; top: 0; height: 100%; width: 100%; }
 
-.category-hero__header-content { position: absolute; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); color: #FFF; left: 0; right: 0; margin: 0 auto; }
+.eaton-category-hero__content { position: relative; padding: 15px 0; width: 100%; z-index: 5; }
 
-.category-hero__header-cta { border: 0; color: #FFF; }
+.eaton-category-hero__cta:hover, .eaton-category-hero__cta:visited { text-decoration: underline; }
 
-.category-hero-eye-brown { color: #FFF; }
+.eaton-category-hero__cta .icon { font-size: 1.4rem; position: relative; top: 1px; }
 
-.category-hero-eye-brown a:hover, .category-hero-eye-brown a:active, .category-hero-eye-brown a:visited, .category-hero-eye-brown a:focus { color: #FFF; text-decoration: underline; }
+.eaton-category-hero__title { margin: 0; position: relative; }
 
-.category-hero-body-copy { color: #FFF; margin-top: 20px; }
+.eaton-category-hero__title::after { background: #FFF; content: ''; position: absolute; bottom: 0; left: 0; height: .5rem; width: 6rem; }
 
-.category-hero__header-title { margin: 20px 0; }
+.image-mask .eaton-category-hero__image::before { position: absolute; left: 0; top: 0; height: 100%; width: 100%; content: ''; background: #000; opacity: 0.5; z-index: 2; }
 
-.category-hero-bottomline { background-color: #FFF; height: 0.3em; width: 4em; }
+.dark-theme .eaton-category-hero__title, .dark-theme .eaton-category-hero__text { color: #FFF; }
 
-@media only screen and (min-width: 991px) { .category-hero__header-title { margin: 30px 0; } }
+.dark-theme .eaton-category-hero__cta, .dark-theme .eaton-category-hero__cta:hover, .dark-theme .eaton-category-hero__cta:visited { color: #FFF; }
+
+@media screen and (max-width: 991px) { .eaton-category-hero { min-height: 92.6666vw; }
+  .eaton-category-hero__eyebrow { margin-bottom: 1.2rem; }
+  .eaton-category-hero__title { padding-bottom: 2.4rem; }
+  .eaton-category-hero__text { margin-top: 1.5rem; } }
+
+@media screen and (min-width: 992px) { .eaton-category-hero { min-height: 25vw; }
+  .eaton-category-hero__content { padding: 30px 0; }
+  .eaton-category-hero__eyebrow { margin-bottom: 1.2rem; }
+  .eaton-category-hero__title { padding-bottom: 3.2rem; } }
 
 .eaton-featured-list__eyebrow { margin-bottom: 30px; text-transform: uppercase; }
 
