--- a/eaton.frontend/src/components/ttil-list/css/views/_view-tile-links.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-tile-links.scss
@@ -115,7 +115,34 @@
   .tile-link-component {
 
     &__element {
-      width: 31%;
+      width: 31.555%;
+    }
+  }
+}
+
+//override column width
+.eaton-grid-control {
+  .tile-link-component {
+    margin: 0;
+
+    &.container {
+      width: 100%;
+
+      @include media-mobile-and-tablet {
+        padding: 0 15px;
+      }
+    }
+
+    &__container {
+      padding: 0;
+    }
+
+    &__element {
+      margin-left: 0;
+    }
+
+    .col-md-3 {
+      width: 100%;
     }
   }
 }
