--- a/eaton.frontend/src/components/ttil/css/views/_view-feature-block.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-feature-block.scss
@@ -77,6 +77,10 @@
           order: 1;
           padding-right: 80px;
           padding-left: 0;
+
+          @include media-tablet-only {
+            padding-left: 40px;
+          }
         }
       }
     }
