--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
@@ -66,6 +66,8 @@
   .feature-block-component__right .feature-block-component__image { -webkit-box-ordinal-group: 3; -webkit-order: 2; -ms-flex-order: 2; order: 2; }
   .feature-block-component__right .feature-block-component__text-container { -webkit-box-ordinal-group: 2; -webkit-order: 1; -ms-flex-order: 1; order: 1; padding-right: 80px; padding-left: 0; } }
 
+@media screen and (min-width: 768px) and (min-width: 768px) and (max-width: 991px) { .feature-block-component__right .feature-block-component__text-container { padding-left: 40px; } }
+
 @media screen and (min-width: 1200px) { .feature-block-component { width: calc((100% - 1140px) / 2 + 1140px); }
   .feature-block-component__right { margin-left: calc((100% - 1140px) / 2); } }
 
