--- a/eaton.frontend/src/components/title/css/views/_view-witheyebrowbyline.scss
+++ b/eaton.frontend/src/components/title/css/views/_view-witheyebrowbyline.scss
@@ -8,6 +8,10 @@ h2.eaton-title__eyebrow-and-byline {
 
 }
 
+.eaton-title--eyebrow-and-byline{
+	margin-top: $spacing__lg;
+}
+
 .eaton-title--eyebrow-and-byline .article-list-single-feature--border{
 	margin-bottom: 30px;
 }
