--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title/css/title.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title/css/title.css
@@ -23,4 +23,6 @@
 
 h2.eaton-title__eyebrow-and-byline { margin-top: 0; margin-bottom: 15px; }
 
+.eaton-title--eyebrow-and-byline { margin-top: 90px; }
+
 .eaton-title--eyebrow-and-byline .article-list-single-feature--border { margin-bottom: 30px; }
