--- a/eaton.frontend/src/global/css/base/elements/_rich-text.scss
+++ b/eaton.frontend/src/global/css/base/elements/_rich-text.scss
@@ -10,6 +10,8 @@
   font-size: 2.4rem;
   line-height: 3.8rem; 
 
+  margin-top: 15px;
+
   // stylelint-disable selector-max-compound-selectors
   b,
   strong {
