--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -314,7 +314,7 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .b-list--no-bullets { list-style-type: none; padding-left: 0; }
 
-.eaton-text-default .rich-text-container { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.8rem; font-family: Arial, sans-serif; font-size: 2.4rem; line-height: 3.8rem; }
+.eaton-text-default .rich-text-container { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.8rem; font-family: Arial, sans-serif; font-size: 2.4rem; line-height: 3.8rem; margin-top: 15px; }
 
 .eaton-text-default .rich-text-container a { color: #005EB8; }
 
