--- a/eaton.frontend/src/components/ttil-list/css/views/_view-category-hero.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-category-hero.scss
@@ -46,10 +46,9 @@
   .image-mask & {
     &__image::before {
       @include absolute-fill;
+      background-image: linear-gradient(0deg, rgba(0,0,0,0.75) 15%,rgba(0,0,0,0) 100%);
 
       content: '';
-      background: #000;
-      opacity: 0.5;
       z-index: 2;
     }
   }
