--- a/eaton.frontend/src/components/ttil-list/css/views/_view-landing-hero.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-landing-hero.scss
@@ -15,7 +15,8 @@
       right: 20%;
       left: 20%;
       text-align: center;
-      top: 0;
+      top: 50%;
+      transform: translateY(-50%);
       color: $color__white;
     }
 
@@ -110,24 +111,16 @@
 @include media-mobile-only {
   .carousel-component-slide {
     img {
-      min-height: 780px;
+      min-height: 920px;
     }
-
   }
-
 }
-
 
 
 @include media-desktop-large {
   .carousel-component {
 
     &-slide {
-
-      &__caption {
-        top: 10%;
-      }
-
       &__cta {
         margin-top: 60px;
       }
