--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -17,7 +17,7 @@
 
 .carousel-component-slide { padding: 0; }
 
-.carousel-component-slide__caption { position: absolute; right: 20%; left: 20%; text-align: center; top: 0; color: #FFF; }
+.carousel-component-slide__caption { position: absolute; right: 20%; left: 20%; text-align: center; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); color: #FFF; }
 
 .carousel-component-slide__cta { margin-top: 30px; }
 
@@ -51,10 +51,9 @@
 
 .carousel-component .slick-active button { background-color: #005EB8; border: 1px solid #005EB8; }
 
-@media screen and (max-width: 767px) { .carousel-component-slide img { min-height: 780px; } }
+@media screen and (max-width: 767px) { .carousel-component-slide img { min-height: 920px; } }
 
-@media screen and (min-width: 1200px) { .carousel-component-slide__caption { top: 10%; }
-  .carousel-component-slide__cta { margin-top: 60px; } }
+@media screen and (min-width: 1200px) { .carousel-component-slide__cta { margin-top: 60px; } }
 
 .eaton-landing-hero--single .carousel-component-slide__caption { position: absolute; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); bottom: auto; }
 
