--- a/eaton.frontend/src/components/header/css/_header-interactions.scss
+++ b/eaton.frontend/src/components/header/css/_header-interactions.scss
@@ -32,7 +32,7 @@
       .icon-close {
         display: block;
         top: -3px;
-        font-size: 18px;
+        font-size: 1.8rem;
       }
     }
 
@@ -79,7 +79,7 @@
       .icon-close {
         display: block;
         top: -3px;
-        font-size: 18px;
+        font-size: 1.8rem;
       }
     }
   }
