--- a/eaton.frontend/src/components/header/css/_header-primary-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-primary-nav.scss
@@ -26,7 +26,7 @@ $primary-nav-border: #EEF0F2;
   &__links {
 
     .icon {
-      font-size: 20px;
+      font-size: 2rem;
       color: $color__primary-blue;
       position: relative;
     }
@@ -110,22 +110,6 @@ $primary-nav-border: #EEF0F2;
       .eaton-header--fixed & {
         height: 70px;
         padding: 20px;
-      }
-
-      .search-open & {
-        transition: background 0.3s ease-in-out;
-        background: $color__primary-gray1;
-
-        .icon-search {
-          display: none;
-        }
-
-        .icon-close {
-          display: block;
-          top: -5px;
-          font-size: 18px;
-          color: $color__white;
-        }
       }
     }
 
