--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -44,7 +44,7 @@
 
 .header-primary-nav .row { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; position: relative; }
 
-.header-primary-nav__links .icon { font-size: 20px; color: #005EB8; position: relative; }
+.header-primary-nav__links .icon { font-size: 2rem; color: #005EB8; position: relative; }
 
 @media screen and (max-width: 991px) { .header-primary-nav .row { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
   .header-primary-nav__links { position: absolute; right: 0; bottom: -6px; }
@@ -59,9 +59,6 @@
   .header-primary-nav__open-search { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; height: 90px; padding: 30px; top: 10px; position: relative; }
   .header-primary-nav__open-search .icon-close { display: none; }
   .eaton-header--fixed .header-primary-nav__open-search { height: 70px; padding: 20px; }
-  .search-open .header-primary-nav__open-search { -webkit-transition: background 0.3s ease-in-out; transition: background 0.3s ease-in-out; background: #333F48; }
-  .search-open .header-primary-nav__open-search .icon-search { display: none; }
-  .search-open .header-primary-nav__open-search .icon-close { display: block; top: -5px; font-size: 18px; color: #FFF; }
   .header-primary-nav__toggle-mobile-menu { display: none; } }
 
 .header-search { width: 100%; -webkit-transform: translateY(-100%); transform: translateY(-100%); overflow: hidden; visibility: hidden; -webkit-transition: visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; transition: visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out; transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; z-index: 100; }
