--- a/eaton.frontend/src/components/ttil-list/css/views/_view-landing-hero.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-landing-hero.scss
@@ -80,8 +80,7 @@
     }
 
     button {
-      background-color: transparent;
-      border: 1px solid $color__secondary-gray5;
+      background-color: $color__secondary-gray5;
     }
   }
 
