--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -43,7 +43,7 @@
 
 .carousel-component__dots:only-child { display: none; }
 
-.carousel-component__dots button { background-color: transparent; border: 1px solid #EEF0F2; }
+.carousel-component__dots button { background-color: #EEF0F2; }
 
 .carousel-component__down-arrow { position: absolute; bottom: 25px; color: #FFF; width: 100%; font-size: 1.5em; z-index: 10; text-align: center; }
 
