--- a/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
@@ -34,8 +34,8 @@
       display: block;
       // padding: $spacing__sm ($spacing__sm / 2);
       padding: $spacing__sm 0;
-      font-size: 20px;
-      line-height: 24px;
+      font-size: 2rem;
+      line-height: 2.4rem;
       background: $color__primary-gray1;
       margin-bottom: 0;
       font-family: 'EatonMedium';
@@ -56,14 +56,15 @@
         color: $color__white;
         cursor: pointer;
         border-bottom: 1px solid rgba(238, 240, 242, 0.5);
-        font-size: 20px;
+        font-size: 2rem;
+        line-height: 2.6rem;
         position: relative;
 
         span { flex: 1; }
 
         .icon {
           display: flex;
-          font-size: 0.75em;
+          font-size: 1.4rem;
         }
 
         &:first-child { margin-top: 0; }
@@ -113,7 +114,7 @@
         display: flex;
         height: 100%;
         align-items: center;
-        font-size: 20px; //1.25em;
+        font-size: 2rem;
         position: relative;
 
         .icon {
