--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -53,11 +53,11 @@
 .eaton-link-list-primary-nav__items a { text-decoration: none; }
 
 @media screen and (max-width: 991px) { .eaton-link-list-primary-nav { position: fixed; top: 52px; left: 0; bottom: 0; width: 100%; height: 100%; -webkit-transform: translate(0, 0); transform: translate(0, 0); overflow: hidden; background: #5B6770; color: #FFF; margin-bottom: 80px; opacity: 0; visibility: hidden; -webkit-transition: -webkit-transform 0.5s ease-in-out; transition: -webkit-transform 0.5s ease-in-out; transition: transform 0.5s ease-in-out; transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out; }
-  .eaton-link-list-primary-nav__headline { display: block; padding: 30px 0; font-size: 20px; line-height: 24px; background: #333F48; margin-bottom: 0; font-family: 'EatonMedium'; }
+  .eaton-link-list-primary-nav__headline { display: block; padding: 30px 0; font-size: 2rem; line-height: 2.4rem; background: #333F48; margin-bottom: 0; font-family: 'EatonMedium'; }
   .eaton-link-list-primary-nav__items { height: 100%; width: 100%; padding: 0; font-family: Arial; min-height: 650px; }
-  .eaton-link-list-primary-nav__items a { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; padding: 20px 0; color: #FFF; cursor: pointer; border-bottom: 1px solid rgba(238, 240, 242, 0.5); font-size: 20px; position: relative; }
+  .eaton-link-list-primary-nav__items a { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; padding: 20px 0; color: #FFF; cursor: pointer; border-bottom: 1px solid rgba(238, 240, 242, 0.5); font-size: 2rem; line-height: 2.6rem; position: relative; }
   .eaton-link-list-primary-nav__items a span { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
-  .eaton-link-list-primary-nav__items a .icon { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; font-size: 0.75em; }
+  .eaton-link-list-primary-nav__items a .icon { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; font-size: 1.4rem; }
   .eaton-link-list-primary-nav__items a:first-child { margin-top: 0; }
   .eaton-link-list-primary-nav__items a:last-child { border-bottom: 0; }
   .eaton-link-list-primary-nav--has-background { background-repeat: no-repeat; background-position: center center; background-size: cover; } }
@@ -67,7 +67,7 @@
   .eaton-link-list-primary-nav__container { width: auto; }
   .eaton-link-list-primary-nav__headline { display: none; }
   .eaton-link-list-primary-nav__items { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; height: 100px; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: end; -webkit-justify-content: flex-end; -ms-flex-pack: end; justify-content: flex-end; font-family: 'EatonMedium'; }
-  .eaton-link-list-primary-nav__items a { margin: 0 15px; padding-right: 5px; padding-left: 5px; color: #333F48; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; height: 100%; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; font-size: 20px; position: relative; }
+  .eaton-link-list-primary-nav__items a { margin: 0 15px; padding-right: 5px; padding-left: 5px; color: #333F48; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; height: 100%; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; font-size: 2rem; position: relative; }
   .eaton-link-list-primary-nav__items a .icon { display: none; }
   .eaton-link-list-primary-nav__items a.active::after { content: ''; position: absolute; height: 4px; bottom: 0; left: 5px; right: 5px; width: 90%; background: #005EB8; z-index: 1; }
   .eaton-header--fixed .eaton-link-list-primary-nav__items { height: 80px; }
