--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -11,10 +11,7 @@
  */
 
 
-.mega-menu .eaton-title__headline { font-size: 26px; line-height: 34px; }
-
-@media screen and (max-width: 991px) { .mega-menu .eaton-link-list-vertical__eyebrow { margin-bottom: 15px; }
-  .mega-menu .eaton-title__headline { font-size: 20px; line-height: 24px; } }
+@media screen and (max-width: 991px) { .mega-menu .eaton-link-list-vertical__eyebrow { margin-bottom: 15px; } }
 
 .mega-menu { position: absolute; width: 100%; z-index: 2; }
 
@@ -44,7 +41,7 @@
   .mega-menu__col--6 { -webkit-flex-basis: 50%; -ms-flex-preferred-size: 50%; flex-basis: 50%; }
   .mega-menu__category { padding: 30px 0; } }
 
-.mega-menu-title { font-size: 20px; background: #333F48; }
+.mega-menu-title { font-size: 2rem; background: #333F48; }
 
 .mega-menu-title .container { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; position: relative; }
 
@@ -60,10 +57,11 @@
 
 @media screen and (max-width: 991px) { .mega-menu-title { padding: 20px 0; }
   .mega-menu-title__level1-link { padding: 10px 10px 10px 0; }
-  .mega-menu-title__level1-link .glyphicon-menu-left { display: inline; margin-right: 10px; font-size: 0.75em; }
+  .mega-menu-title__level1-link .glyphicon-menu-left { display: inline; margin-right: 10px; font-size: 1.4rem; }
   .mega-menu-title__level1-link .glyphicon-menu-right { display: none; } }
 
 @media screen and (min-width: 992px) { .mega-menu-title { padding: 30px 0; }
   .mega-menu-title__level1-link .glyphicon-menu-left { display: none; }
-  .mega-menu-title__level1-link .glyphicon-menu-right { display: inline; margin-left: 10px; }
-  .mega-menu-title__close-menu { display: inline; position: absolute; right: 15px; } }
+  .mega-menu-title__level1-link .glyphicon-menu-right { display: inline; margin-left: 10px; font-size: 1.4rem; }
+  .mega-menu-title__close-menu { display: inline; position: absolute; right: 15px; }
+  .mega-menu-title__close-menu .icon { font-size: 2.1rem; } }
