--- a/eaton.frontend/src/components/title/css/views/_view-witheyebrowbyline.scss
+++ b/eaton.frontend/src/components/title/css/views/_view-witheyebrowbyline.scss
@@ -24,6 +24,10 @@ h2.eaton-title__eyebrow-and-byline {
     margin: 20px 0 25px;
   }
 
+  &__eyebrow {
+    margin-bottom: 15px;
+  }
+
   .dark-theme & {
     &__headline, &__eyebrow, &__byline {
       color: $color__white;
